Fixing ionic scrollbar showing

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,6 +9,8 @@ html {
 }
 
 ion-content {
+    --overflow: hidden;
+    overflow: auto;
     scrollbar-width: 0;
 
     &::-webkit-scrollbar {
